[package]
name = "synth-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
ahash = "0.8.3"
biquad = "0.4.2"
cpal = "0.15.2"
dyn-clone = "1.0.11"
egui_plot = "0.24.1"
indexmap = "2.1.0"
puffin = "0.18.0"
puffin_egui = "0.24.0"
rand = "0.8.5"
rfd = "0.12.1"
ringbuf = "0.3.2"
rubato = "0.14.1"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
topological-sort = "0.2.2"
wasm-timer = "0.2.5"

#getrandom is a dependency of rand
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "*"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.64"
features = ["Document"]

[target.'cfg(target_arch = "wasm32")'.dependencies.cpal]
features = ["wasm-bindgen"]
version = "0.15.2"

[dependencies.symphonia]
version = "0.5.2"
features = ["mp3"]

[dependencies.eframe]
version = "0.24.1"
default-features = false
features = ["default_fonts", "glow"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
