[package]
name = "synth-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
ahash = "0.8.11"
biquad = "0.4.2"
cpal = "0.15.2"
dyn-clone = "1.0.11"
eframe = { version = "0.24.1", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.24.1"
enum-iterator = "1.4.1"
indexmap = "2.1.0"
puffin = "0.18.0"
puffin_egui = "0.24.0"
rand = "0.8.5"
rfd = "0.12.1"
ringbuf = "0.3.2"
rubato = "0.14.1"
topological-sort = "0.2.2"
wasm-timer = "0.2.5"
symphonia = { version = "0.5.2", features = ["mp3"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
uuid = { version = "1.3.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
#getrandom is a dependency of rand
getrandom = { version = "*", features = ["js"] }
web-sys = { version = "0.3.64", features = ["Document"] }
#cpal is already a dependency
cpal = { features = ["wasm-bindgen"], version = "*" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
