[package]
name = "synth-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
ahash = "0.8.11"
biquad = "0.4.2"
cpal = "0.15.3"
dyn-clone = "1.0.17"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.27.2"
enum-iterator = "2.0.1"
indexmap = "2.2.6"
puffin = "0.19.0"
puffin_egui = "0.27.0"
rand = "0.8.5"
rfd = "0.14.1"
ringbuf = "0.4.0"
rubato = "0.15.0"
topological-sort = "0.2.2"
wasm-timer = "0.2.5"
symphonia = { version = "0.5.4", features = ["mp3"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
uuid = { version = "1.8.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
#getrandom is a dependency of rand
getrandom = { version = "*", features = ["js"] }
web-sys = { version = "0.3.69", features = ["Document"] }
#cpal is already a dependency
cpal = { features = ["wasm-bindgen"], version = "*" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
